--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,7 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 *.pyc
 *.mov
+rl/agents/__pycache__/
+slurmlogs/
+frames/
+videos/
